# StealthBrowser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
stealth_browser/: __init__.py  __main__.py  cli.py
stealth_browser/engine/: __init__.py  analyzer.py  collector.py  generator.py  scorer.py
stealth_browser/export/: __init__.py  html_export.py  json_export.py  yaml_export.py
stealth_browser/fingerprints/: __init__.py  audio.py  behavior.py  canvas.py  fonts.py  hardware.py  headers.py  network.py  screen.py  storage.py  timezone.py  webgl.py
stealth_browser/profiles/: __init__.py  presets.py
stealth_browser/utils/: __init__.py  colors.py  entropy.py
tests/: __init__.py  test_analyzer.py  test_collector.py  test_generator.py  test_scorer.py
